Fixed text placement to be centered vertically and wider on narrow displays.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -1010,6 +1010,20 @@ room-sidebar-width = 240px
   .room-key-form-component
     margin-bottom 10px
 
+  .home-page
+    .text-row
+      padding-left 20px
+      padding-right 20px
+
+      h3
+        padding-top 0 !important
+
+    // Center images on their own line.
+    .big-image
+      display block
+      margin 0 auto 10px !important
+      float none !important
+
 home-modal-width = 350px
 home-modal-horiz-padding = 30px
 home-modal-inner-width = home-modal-width - 2 * home-modal-horiz-padding
